# corrode-mcp

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/mcp/: crates_io.rs  function_signatures.rs  mod.rs  patch.rs  prompts.rs  tools.rs  treesitter.rs  types.rs
src/mcp/tools/: crates_io_tools.rs  mod.rs
