[package]
name = "corrode-mcp"
version = "0.0.2"
edition = "2024"
authors = ["Alex Boehm"]
description = "Corrode Code Model Context Protocol (MCP) Rust Server"
keywords = ["rust", "ai", "mcp", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
html2text = "0.14"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
schemars = "0.8" # Added for JsonSchema derivation
mcp-attr = "0.0.6"
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

maplit = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
signal-hook = "0.3"
lazy_static = "1.4.0"
dirs = "6"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "0.20.4"
tree-sitter-typescript = "0.20.3"
tree-sitter-go = "0.20.0"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.3"
walkdir = "2.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
